<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.VenueDescription"
    android:background="@color/white">


    <ImageView

        android:id="@+id/mainimg"
        android:layout_width="match_parent"
        android:layout_height="253dp"

        android:scaleType="fitXY"
        app:srcCompat="@drawable/busmantap"
        android:contentDescription="@string/mainimg" />

    <TextView
        android:id="@+id/venue_name"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_below="@+id/mainimg"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/bus_mantap"
        android:textAlignment="center"
        android:textColor="@color/darkpurple"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="392dp"
        android:layout_height="227dp"
        android:layout_below="@+id/venue_name"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"

        android:layout_marginRight="20dp"
        android:layout_marginBottom="120dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/bus_mantap_is_typically_equipped_with_various_pieces_of_equipment_to_facilitate_performances_presentations_and_events_equipment_are_sound_system_stage_lighting_stage_backstage_area"
        android:textColor="@color/lightpurple"
        android:textSize="20dp"
        tools:ignore="SpUsage,TextSizeCheck" />

    <Button

        android:id="@+id/button2"
        android:layout_width="139dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-338dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="41dp"
        android:background="@drawable/lightpurplebtn"
        android:text="@string/book_now"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="128dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="267dp"
        android:layout_marginBottom="654dp"
        android:background="@drawable/backbtnstyle"
        android:drawableStart="@drawable/baseline_keyboard_backspace_24"
        android:text="@string/back"
        android:textColor="@color/black" />
</RelativeLayout>