<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/backgrnd"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="208dp"
        android:layout_height="127dp"
        android:layout_marginBottom="30dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="TODO" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/form"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">


        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="SignIn"
                android:textAlignment="center"
                android:textColor="@color/lightpurple"
                android:textSize="34sp"
                android:textStyle="normal" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                app:boxStrokeColor="@color/lightpurple"
                app:hintTextAppearance="@style/CustomHintTextAppearance">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"

                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                app:boxStrokeColor="@color/lightpurple"
                app:passwordToggleEnabled="true"
                app:hintTextAppearance="@style/CustomHintTextAppearance">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/form"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"

                    android:padding="8dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/forgotpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/forgot_password"
                android:textAlignment="textStart"
                android:textColor="@color/lightpurple"
                android:textSize="16sp" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/btnshape"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/login"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="DuplicateSpeakableTextCheck" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/notregistered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_regular"
        android:padding="8dp"
        android:text="@string/not_yet_registered_sign_up"
        android:textAlignment="center"
        android:textColor="@color/lightpurple"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />


</LinearLayout>