<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="652dp"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.VenueDescription"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"

            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="335dp">

                <Button
                    android:id="@+id/back_btn"
                    android:layout_width="56dp"
                    android:layout_height="46dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:background="@drawable/backbtnstyle"
                    android:drawableStart="@drawable/baseline_keyboard_backspace_24"
                    android:onClick="goBackRecyler"
                    android:padding="14dp"

                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/venue_image"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:contentDescription="@string/mainimg"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/busmantap" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/venue_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"

                android:textAllCaps="true"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/bus_mantap"
                android:textColor="@color/darkPurple"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/venue_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/bus_mantap_is_typically_equipped_with_various_pieces_of_equipment_to_facilitate_performances_presentations_and_events_equipment_are_sound_system_stage_lighting_stage_backstage_area"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppins_regular"
                android:textAlignment="textStart"
                android:textColor="@color/lightPurple"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/book_btn"
        android:layout_width="139dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/lightpurplebtn"
        android:onClick="bookNow"
        android:text="@string/book_now"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />
</LinearLayout>